adding black formatter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,4 +14,5 @@
         {"column":   80, "color": "#5a5a5a40"}, // 25% opaque
     ],
     "inline-bookmarks.view.showVisibleFilesOnly": true,
+    "python.formatting.provider": "black",
 }
