--- a/rusty_jeep_project/guessing_game/Cargo.toml
+++ b/rusty_jeep_project/guessing_game/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8.5"
+# Cargo understands Semantic Versioning (sometimes called SemVer), which is a standard for writing 
+# version numbers. The specifier 0.8.5 is actually shorthand for ^0.8.5, which means any version 
+# that is at least 0.8.5 but below 0.9.0.
