--- a/rusty_jeep_project/nano_rust_toy/Cargo.toml
+++ b/rusty_jeep_project/nano_rust_toy/Cargo.toml
@@ -4,5 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+libc = "0.2"
+
+[profile.release]
+strip = true
+opt-level = "z"
+lto = true
+panic = "abort"
