--- a/rusty_jeep_project/rust_the_book_exercise/.vscode/settings.json
+++ b/rusty_jeep_project/rust_the_book_exercise/.vscode/settings.json
@@ -5,5 +5,6 @@
         "./Cargo.toml",
         "./Cargo.toml",
         "./Cargo.toml"
-    ]
+    ],
+    "inline-bookmarks.view.showVisibleFilesOnly": true
 }
