--- a/rusty_jeep_project/bevy_inspector_gui/Cargo.toml
+++ b/rusty_jeep_project/bevy_inspector_gui/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 bevy = { version = "0.10.0", features = ["dynamic_linking"] }
 bevy-inspector-egui = "0.18.3"
+egui = "0.21.0"
+bevy_egui = "0.20.3"
 bevy_vector_shapes = "0.4.5"
 
 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
