--- a/rusty_jeep_project/bevy_break_out/Cargo.toml
+++ b/rusty_jeep_project/bevy_break_out/Cargo.toml
@@ -8,3 +8,11 @@ edition = "2021"
 [dependencies]
 bevy = "0.10"
 bevy_editor_pls = "0.4"
+
+# Enable a small amount of optimization in debug mode
+[profile.dev]
+opt-level = 1
+
+# Enable high optimization for dependencies (including Bevy), but not for our code
+[profile.dev.package."*"]
+opt-level = 3
