Stubbing out console_bevy_save plugin

--- a/rusty_jeep_project/bevy_break_out/Cargo.toml
+++ b/rusty_jeep_project/bevy_break_out/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 bevy = {version = "0.10", features = ["mp3"]}
 bevy_editor_pls = "0.4"
+bevy_save = "0.8.1"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
