--- a/rusty_jeep_project/rust_the_book_exercise/.vscode/settings.json
+++ b/rusty_jeep_project/rust_the_book_exercise/.vscode/settings.json
@@ -4,7 +4,8 @@
         "./Cargo.toml",
         "./Cargo.toml",
         "./Cargo.toml",
-        "./Cargo.toml"
+        "./Cargo.toml",
+        "./hello_macro/Cargo.toml"
     ],
     "inline-bookmarks.view.showVisibleFilesOnly": true
 }
